--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
 @maincolor: #EC4A4A;
 @secondarycolor:#FFC710;
 @thirdiarycolor: #9DAFBC; 
@@ -12,6 +12,10 @@
 @menucolor:#ffffff;
 @highlightcolor: #C7ECE8;
 @highlightcolordark: #A23535;
+@linkcolor: #2CAB9D;
+@hoverlink: #178074;
+@oddrowbg: #F8F9F9;
+
 
 .m-4 {
     margin: 1.5rem !important;
