--- a/css/start.css
+++ b/css/start.css
@@ -850,7 +850,8 @@ footer .d-flex {
 .copyright {
   /*flex: 0 0 100%;*/
   font-size: 12px;
-  color: greybg;
+  color: #1d2b31;
+  margin-bottom: 10px;
 }
 .order-md-1 {
   -webkit-box-ordinal-group: 2;
@@ -890,7 +891,7 @@ footer .d-flex {
 }
 /*Content*/
 .card {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   box-shadow: 0 0 0.875rem 0 rgba(53, 64, 82, 0.15);
 }
 .flex-fill {
@@ -1147,6 +1148,12 @@ svg {
 .casedetails {
   align-self: flex-end;
 }
+.casedetails .table td {
+  padding: .45rem;
+}
+.casedetails h3 {
+  padding: 0 1.2rem;
+}
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #ec4a4a;
@@ -1240,6 +1247,13 @@ h3 {
   font-weight: 600;
   padding: 1rem 1rem 0;
 }
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.show > .btn-primary.dropdown-toggle {
+  border-color: #f1f2f2;
+  background: #a23535;
+  outline: none !important;
+}
 .content .btn-primary {
   display: flex;
   border: 0;
@@ -1257,6 +1271,10 @@ h3 {
   background: #a23535;
 }
 .content .btn-primary:focus {
+  background: #a23535;
+}
+.content .btn-primary:active {
+  border-color: #f1f2f2;
   background: #a23535;
 }
 .content h3 {
