--- a/css/start.css
+++ b/css/start.css
@@ -464,8 +464,14 @@ a:focus {
 }
 .header {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 99998;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 .navbar-brand {
+  margin-left: 48px;
   width: 210px;
   margin-top: -10px;
 }
@@ -570,7 +576,9 @@ footer a:hover {
   }
 }
 main {
+  position: relative;
   margin-left: 80px;
+  top: 70px;
   -webkit-transition: margin-left 0.35s ease-in-out, left 0.35s ease-in-out;
   transition: margin-left 0.35s ease-in-out, left 0.35s ease-in-out;
 }
@@ -821,7 +829,8 @@ main.active {
 }
 .sidebar-toggler {
   z-index: 199999;
-  margin-left: -15px;
+  position: fixed;
+  left: 35px;
   margin-right: 40px;
 }
 .sidebar-toggler .sidebar-toggler-toggled {
@@ -869,7 +878,7 @@ footer .d-flex {
     margin-top: 25px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1025px) {
   .h2,
   h2 {
     font-size: calc(1.33125rem);
