--- a/less/start.less
+++ b/less/start.less
@@ -20,6 +20,7 @@ a:hover, a:focus{
     top:0;
     left:0;
     width:100%;
+    background:#ffffff;
 }
 .navbar-brand {
   margin-left:48px;
@@ -150,6 +151,7 @@ footer a{
 main {position:relative;
     margin-left: 80px;
     top:70px;
+    z-index:80;
     -webkit-transition: margin-left .35s ease-in-out,left .35s ease-in-out;
     transition: margin-left .35s ease-in-out,left .35s ease-in-out;
 }
