--- a/less/start.less
+++ b/less/start.less
@@ -567,7 +567,7 @@ footer {
     border: 0 solid transparent;
     border-radius: .25rem;
 }
-i:after {
+/*i:after {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: '\f128';
@@ -581,6 +581,19 @@ i:after {
     height: 100%;
     text-align: center;
 }
+    */
+
+.fa {
+    width: 32px;
+    font-size: 14px;
+    display: inline-block;
+    text-align: right;
+    margin-right: 10px;
+    position:relative;
+    font-weight:900;
+}
+
+
 .badge {
     display: inline-flex;
     justify-content: center;
@@ -1003,6 +1016,21 @@ svg {
         font-weight: 600;
         padding: 1rem 1rem 0;
     }
+
+.card-title {
+    font-size: 18px;
+    font-weight: 600;
+    
+}
+
+
+
+.card-header {
+    padding: .75rem 1.25rem;
+    margin-bottom: 0;
+    background-color: @greybg;
+    border-bottom: 0px solid rgba(0,0,0,.125);
+}
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
     border-color: @greybg;
     background: @highlightcolordark;
@@ -1071,3 +1099,221 @@ svg {
             margin-top: 10px;
         }
     }
+
+
+    /*Dashboard*/
+
+#dashboard {
+    h3{
+        margin-top:0 !important;
+    }
+    h2 {
+
+        .statistic {
+            color: @maincolor;
+            text-align: center;
+            font-size: 34px;
+            display: block;
+            text-align: center;
+        }
+
+        span {
+            margin-top: 15px;
+            text-transform: uppercase;
+            font-size: 13px;
+            text-align: center;
+            display: block;
+            color: @bodytext;
+        }
+    }
+
+    .avatar {
+        border-radius: 50%;
+        width: 45px;
+        height: 45px;
+        background: @highlightcolor;
+        display: flex;
+      
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        i:before{
+            font-size:20px;
+        }
+        img {
+            vertical-align: middle !important;
+        }
+    }
+}
+.alert-warning {
+    color: @bodytext;
+    background-color: #FFF8E2;
+    border-color: @secondarycolor;
+
+    i {
+        color: @secondarycolor;
+    }
+}
+
+button{
+    outline:none !important;
+}
+
+.redcard {
+    background: @maincolor;
+    color: #ffffff;
+
+    .avatar {
+        background: #ffffff !important;
+
+        i {
+            color: @maincolor;
+        }
+    }
+
+    h1 {
+        color: @secondarycolor;
+    }
+
+    a {
+        color: @secondarycolor;
+    }
+}
+
+/*Experiement*/
+
+
+input {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #eceff1;
+    font-size: 24px;
+    height: 50px;
+    padding-bottom: 15px;
+}
+
+input:focus {
+    outline: 0;
+}
+
+@media (min-width: 900px) {
+    input {
+        font-size: 32px;
+    }
+}
+
+.input-buttons {
+    height: 50px;
+    border-bottom: 1px solid #eceff1;
+    padding: 0;
+}
+
+.input-buttons i {
+    padding: 0 12px;
+    color: #eceff1;
+    float: right;
+}
+
+.input-buttons .fa-plus {
+}
+
+@media (min-width: 600px) {
+    .input-buttons .fa-trash-o:hover {
+        color: #ff5252;
+    }
+
+    .input-buttons .fa-plus:hover {
+        color: #69f0ae;
+    }
+}
+
+.error {
+    color: #ff5252;
+    display: none;
+    font-size: 16px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.error .fa-times {
+    color: #eceff1;
+    padding: 5px 15px;
+    float: right;
+}
+
+.error .fa-times:hover {
+    color: #fafafa;
+}
+
+.error p {
+    margin: 20px 0;
+}
+
+@media (min-width: 600px) {
+    .error p {
+        font-size: 20px;
+    }
+}
+
+.todo-list {
+    width: 100%;
+    padding: 0;
+    margin: 20px 0 50px;
+
+    span {
+        position: absolute;
+        top: 15px;
+        right: 0;
+    }
+
+    span a {
+        color: #455a64;
+    }
+
+    span i {
+        padding: 10px 15px;
+    }
+
+    span .fa-check {
+    }
+
+    span .fa-check:hover {
+        color: #69f0ae;
+    }
+
+    span .fa-trash-o:hover {
+        color: #ff5252;
+    }
+
+    .complete {
+        color: #90a4ae;
+        text-decoration: line-through;
+    }
+
+    .complete .check {
+        color: #69f0ae;
+    }
+}
+
+.todo-list .todo {
+    background: @highlightcolor;
+    border-bottom: 1px dotted #455a64;
+    color: #455a64;
+    font-size: 20px;
+    list-style: none;
+    padding: 20px 130px 20px 15px;
+    position: relative;
+    white-space: normal;
+}
+
+
+
+p.warning {
+    width: 100%;
+    font-size: 12px;
+    color: @red;
+}
+
+.error {
+    width: 100%;
+}
