to-do list revised

--- a/less/variables.less
+++ b/less/variables.less
@@ -15,7 +15,8 @@
 @linkcolor: #2CAB9D;
 @hoverlink: #178074;
 @oddrowbg: #F8F9F9;
-
+@green: #26B282;
+@soft: #8ACFCF;
 
 .m-4 {
     margin: 1.5rem !important;
