--- a/css/start.css
+++ b/css/start.css
@@ -811,6 +811,11 @@ main.active {
   width: 2.6875rem;
   height: 2.6875rem;
 }
+.btn-small {
+  height: 36px;
+  font-size: 13px;
+  padding: 0.45rem 0.66rem;
+}
 .sidebar-toggler:focus,
 .sidebar-toggler:hover {
   text-decoration: none;
@@ -922,21 +927,6 @@ footer .d-flex {
   border: 0 solid transparent;
   border-radius: .25rem;
 }
-/*i:after {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: '\f128';
-    font-style: normal;
-   
-    
-    padding: .15em;
-    font-size: 1.25em;
-    display: block;
-    width: 1.5em;
-    height: 100%;
-    text-align: center;
-}
-    */
 .fa {
   width: 32px;
   font-size: 14px;
@@ -964,6 +954,7 @@ footer .d-flex {
   font-size: 12px;
   box-shadow: 0 0 0.375rem 0 rgba(53, 64, 82, 0.15);
   line-height: 16px;
+  min-width: 100px;
 }
 .badge.status {
   background: #1d2b31;
@@ -975,18 +966,35 @@ footer .d-flex {
 .badge.warning i {
   position: relative;
 }
-.badge.warning i:after {
-  content: "\f071";
-  color: #ff0000;
-}
 .badge.warning .circle {
   margin-right: 10px;
   background: red;
+}
+.badge.normal {
+  color: #26b282;
+}
+.badge.normal i {
+  position: relative;
+}
+.badge.normal .circle {
+  margin-right: 10px;
+  background: #26b282;
+}
+.badge.low {
+  color: #9dafbc;
+}
+.badge.low i {
+  position: relative;
+}
+.badge.low .circle {
+  margin-right: 10px;
+  background: #9dafbc;
 }
 .circle {
   display: inline-block;
   width: 16px;
   height: 16px;
+  border-radius: 50%;
 }
 .casetitle {
   display: flex;
@@ -1270,7 +1278,8 @@ h3 {
   padding: 1rem 1rem 0;
 }
 .card-title {
-  font-size: 18px;
+  font-size: 14px;
+  text-transform: uppercase;
   font-weight: 600;
 }
 .card-header {
@@ -1285,6 +1294,20 @@ h3 {
   border-color: #f1f2f2;
   background: #a23535;
   outline: none !important;
+}
+.content .btn-soft {
+  outline: none !important;
+  display: flex;
+  border: 0;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: bold;
+  border-radius: 80px;
+  background: #8acfcf;
+  padding: 0.7rem 2rem;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
 }
 .content .btn-primary {
   display: flex;
@@ -1336,8 +1359,22 @@ h3 {
   margin-top: 10px;
 }
 /*Dashboard*/
+#dashboard {
+  position: relative;
+}
+#dashboard:before {
+  background: #c7ece8;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -20px;
+  width: 100%;
+  height: 300px;
+}
 #dashboard h3 {
   margin-top: 0 !important;
+  padding-top: 0 !important;
 }
 #dashboard h2 .statistic {
   color: #ec4a4a;
@@ -1357,7 +1394,7 @@ h3 {
   border-radius: 50%;
   width: 45px;
   height: 45px;
-  background: #c7ece8;
+  background: #ec4a4a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1372,6 +1409,7 @@ h3 {
 .alert-warning {
   color: #2f1f3e;
   background-color: #FFF8E2;
+  font-size: 12px;
   border-color: #ffc710;
 }
 .alert-warning i {
@@ -1396,108 +1434,52 @@ button {
 .redcard a {
   color: #ffc710;
 }
-/*Experiement*/
-input {
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #eceff1;
-  font-size: 24px;
-  height: 50px;
-  padding-bottom: 15px;
+.todo .nav-pills .nav-link {
+  font-weight: 500;
+  color: #2f1f3e;
 }
-input:focus {
-  outline: 0;
+.todo .badge {
+  align-items: flex-start;
+  justify-content: flex-start;
+  line-height: 20px;
 }
-@media (min-width: 900px) {
-  input {
-    font-size: 32px;
-  }
-}
-.input-buttons {
-  height: 50px;
-  border-bottom: 1px solid #eceff1;
-  padding: 0;
-}
-.input-buttons i {
-  padding: 0 12px;
-  color: #eceff1;
-  float: right;
-}
-@media (min-width: 600px) {
-  .input-buttons .fa-trash-o:hover {
-    color: #ff5252;
-  }
-  .input-buttons .fa-plus:hover {
-    color: #69f0ae;
-  }
-}
-.error {
-  color: #ff5252;
-  display: none;
-  font-size: 16px;
-  margin-top: 20px;
-  text-align: center;
-}
-.error .fa-times {
-  color: #eceff1;
-  padding: 5px 15px;
-  float: right;
-}
-.error .fa-times:hover {
-  color: #fafafa;
-}
-.error p {
-  margin: 20px 0;
-}
-@media (min-width: 600px) {
-  .error p {
-    font-size: 20px;
-  }
-}
-.todo-list {
-  width: 100%;
-  padding: 0;
-  margin: 20px 0 50px;
-}
-.todo-list span {
-  position: absolute;
-  top: 15px;
-  right: 0;
-}
-.todo-list span a {
-  color: #455a64;
-}
-.todo-list span i {
-  padding: 10px 15px;
-}
-.todo-list span .fa-check:hover {
-  color: #69f0ae;
-}
-.todo-list span .fa-trash-o:hover {
-  color: #ff5252;
-}
-.todo-list .complete {
-  color: #90a4ae;
-  text-decoration: line-through;
-}
-.todo-list .complete .check {
-  color: #69f0ae;
-}
-.todo-list .todo {
-  background: #c7ece8;
-  border-bottom: 1px dotted #455a64;
-  color: #455a64;
-  font-size: 20px;
-  list-style: none;
-  padding: 20px 130px 20px 15px;
-  position: relative;
-  white-space: normal;
-}
-p.warning {
-  width: 100%;
+h3 .question {
+  display: block;
+  text-transform: uppercase;
   font-size: 12px;
-  color: #ff0000;
+  color: #9dafbc;
 }
-.error {
-  width: 100%;
+.alert-dismissible .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: .55rem 0.75rem;
+  color: inherit;
+}
+.stat:hover {
+  background: #ffc710;
+  transition: all 0.2s;
+}
+.stat a {
+  color: #2f1f3e;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 20px;
+  display: block;
+}
+#small-stats a {
+  font-size: 13px;
+}
+#small-stats .avatar img {
+  width: 26px;
+  height: 26px;
+}
+#btn_view {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 36px;
+  font-size: 13px;
+  padding: 0.45rem 0.66rem;
 }
