--- a/less/start.less
+++ b/less/start.less
@@ -428,7 +428,11 @@ main.active {
     width: 2.6875rem;
     height: 2.6875rem;
 }
-
+.btn-small {
+    height: 36px;
+    font-size: 13px;
+    padding: 0.45rem 0.66rem;
+}
 .sidebar-toggler:focus, .sidebar-toggler:hover {
     text-decoration: none;
 }
@@ -567,21 +571,7 @@ footer {
     border: 0 solid transparent;
     border-radius: .25rem;
 }
-/*i:after {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: '\f128';
-    font-style: normal;
-   
-    
-    padding: .15em;
-    font-size: 1.25em;
-    display: block;
-    width: 1.5em;
-    height: 100%;
-    text-align: center;
-}
-    */
+
 
 .fa {
     width: 32px;
@@ -612,20 +602,18 @@ footer {
     font-size: 12px;
     box-shadow: 0 0 0.375rem 0 rgba(53,64,82,.15);
     line-height: 16px;
-    &.status{
-        background:@darkbg;
-        color:#ffffff;
+    min-width: 100px;
+
+    &.status {
+        background: @darkbg;
+        color: #ffffff;
     }
+
     &.warning {
         color: @red;
 
         i {
             position: relative;
-
-            &:after {
-                content: "\f071";
-                color: @red;
-            }
         }
 
         .circle {
@@ -633,276 +621,289 @@ footer {
             background: red;
         }
     }
-}
 
-.circle{display:inline-block;
-    width:16px;
-    height:16px;
-}
+    &.normal {
+        color: @green;
 
+        i {
+            position: relative;
+        }
 
-.casetitle{
-    display:flex;
-    justify-content:flex-start;
-    align-items:center;
-}
-
-
-/*Steps*/
-.steps {
-    margin: 0px;
-    padding: 0;
-  width:97%;
-    display:flex;
-    flex-wrap:wrap;
-}
-
-
-
-
-.steps li {
-    display: flex;
-    flex: 1 1 6%;
-    margin-left: 0;
-    list-style-type: none;
-    padding: 5px 5px 5px 30px; /* padding around text, last should include arrow width */
-    position: relative;
-    text-align: center;
-    height: 48px;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    box-sizing: border-box;
-    box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.2);
-    border-radius:4px;
-    &:nth-child(1) {
-        flex: 1 0 12%;
-
-
-        a{padding-left:0;}
+        .circle {
+            margin-right: 10px;
+            background: @green;
+        }
     }
 
-    &:nth-child(2) {
-        flex: 1 0 16%;
-    }
-}
+    &.low {
+        color: @thirdiarycolor;
 
+        i {
+            position: relative;
+        }
 
-.steps li::after {
-    content: "";
-    z-index: 10;
-    position: absolute;
-    width: 0;
-    height: 0;
-    top: 7px;
-    right: -16px;
-    box-sizing: border-box;
-    border: 17px solid black;
-    border-color: transparent transparent #ffffff #ffffff;
-    transform-origin: 50% 50%;
-    transform: rotate(-135deg);
-    border-radius: 0px 0px 0 5px;
-    box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.2);
-}
-
-.steps a {
-    color: @bodytext;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 13px;
-    text-decoration: none;
-    padding-left: 12px;
-}
-/* Current */
-.steps li.current {
-    background-color: #ffffff;
-}
-
-.steps li.current::after {
-    
-}
-
-/* Following */
-
-.steps li.current ~ li::after {
-   
-}
-
-/* Hover for completed and current */
-.steps li:hover {
-    background-color: @highlightcolor !important;
-    transition: all 0.3s;
-
-    &:after {
-        border-color: transparent transparent @highlightcolor @highlightcolor !important;
-        transition: all 0.3s;
-    }
-}
-
-.steps li.completed {
-    background: @greybg;
-
-    a::before {
-       position:relative;
-       display:inline-block;
-        content: "L";
-        font-size:20px;
-        top:0px;
-       left:2px;
-        margin-right:5px;
-        font-family: arial;
-        -ms-transform: scaleX(-1) rotate(-35deg); /* IE 9 */
-        -webkit-transform: scaleX(-1) rotate(-35deg); /* Chrome, Safari, Opera */
-        transform: scaleX(-1) rotate(-35deg);
-        color:@maincolor;
-
-       
-        
-    }
-
-    &::after {
-        border-color: transparent transparent @greybg @greybg;
-    }
-}
-
-.steps li.current {
-  
-
-    &::before {
-        position: absolute;
-        content: url("../images/currentstep.svg");
-        width: 37px;
-        height: 37px;
-        bottom: -26px;
-
-
-    }
-
-  
-}
-
-
-
-.steps li.stagecolor_5 {
-    background-color: @maincolor;
-
-    &::after {
-        border-color: transparent transparent @maincolor @maincolor;
-    }
-
-    &:hover {
-        background-color: @highlightcolordark !important;
-        transition: all 0.3s;
-
-        &:after {
-            border-color: transparent transparent @highlightcolordark @highlightcolordark !important;
-            transition: all 0.3s;
+        .circle {
+            margin-right: 10px;
+            background: @thirdiarycolor;
         }
     }
 }
 
-.steps li.stagecolor_5 a {
-    color: #ffffff !important;
-}
-
-
-
-
-
-/*Hourglass*/
-@keyframes top-clip {
-    0% {
+    .circle {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border-radius:50%;
     }
 
-    50% {
+
+    .casetitle {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    /*Steps*/
+    .steps {
+        margin: 0px;
+        padding: 0;
+        width: 97%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+
+
+
+    .steps li {
+        display: flex;
+        flex: 1 1 6%;
+        margin-left: 0;
+        list-style-type: none;
+        padding: 5px 5px 5px 30px; /* padding around text, last should include arrow width */
+        position: relative;
+        text-align: center;
+        height: 48px;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        box-sizing: border-box;
+        box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+
+        &:nth-child(1) {
+            flex: 1 0 12%;
+
+
+            a {
+                padding-left: 0;
+            }
+        }
+
+        &:nth-child(2) {
+            flex: 1 0 16%;
+        }
+    }
+
+
+    .steps li::after {
+        content: "";
+        z-index: 10;
+        position: absolute;
+        width: 0;
+        height: 0;
+        top: 7px;
+        right: -16px;
+        box-sizing: border-box;
+        border: 17px solid black;
+        border-color: transparent transparent #ffffff #ffffff;
+        transform-origin: 50% 50%;
+        transform: rotate(-135deg);
+        border-radius: 0px 0px 0 5px;
+        box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .steps a {
+        color: @bodytext;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 13px;
+        text-decoration: none;
+        padding-left: 12px;
+    }
+    /* Current */
+    .steps li.current {
+        background-color: #ffffff;
+    }
+
+    .steps li.current::after {
+    }
+    /* Following */
+    .steps li.current ~ li::after {
+    }
+    /* Hover for completed and current */
+    .steps li:hover {
+        background-color: @highlightcolor !important;
+        transition: all 0.3s;
+
+        &:after {
+            border-color: transparent transparent @highlightcolor @highlightcolor !important;
+            transition: all 0.3s;
+        }
+    }
+
+    .steps li.completed {
+        background: @greybg;
+
+        a::before {
+            position: relative;
+            display: inline-block;
+            content: "L";
+            font-size: 20px;
+            top: 0px;
+            left: 2px;
+            margin-right: 5px;
+            font-family: arial;
+            -ms-transform: scaleX(-1) rotate(-35deg); /* IE 9 */
+            -webkit-transform: scaleX(-1) rotate(-35deg); /* Chrome, Safari, Opera */
+            transform: scaleX(-1) rotate(-35deg);
+            color: @maincolor;
+        }
+
+        &::after {
+            border-color: transparent transparent @greybg @greybg;
+        }
+    }
+
+    .steps li.current {
+
+
+        &::before {
+            position: absolute;
+            content: url("../images/currentstep.svg");
+            width: 37px;
+            height: 37px;
+            bottom: -26px;
+        }
+    }
+
+
+
+    .steps li.stagecolor_5 {
+        background-color: @maincolor;
+
+        &::after {
+            border-color: transparent transparent @maincolor @maincolor;
+        }
+
+        &:hover {
+            background-color: @highlightcolordark !important;
+            transition: all 0.3s;
+
+            &:after {
+                border-color: transparent transparent @highlightcolordark @highlightcolordark !important;
+                transition: all 0.3s;
+            }
+        }
+    }
+
+    .steps li.stagecolor_5 a {
+        color: #ffffff !important;
+    }
+    /*Hourglass*/
+    @keyframes top-clip {
+        0% {
+        }
+
+        50% {
+            transform: translateY(21px);
+        }
+
+        100% {
+            transform: translateY(21px);
+        }
+    }
+
+    @keyframes bottom-sand-path {
+        0% {
+        }
+
+        50% {
+            transform: translateY(0);
+        }
+
+        100% {
+            transform: translateY(0);
+        }
+    }
+
+    @keyframes bottom-sand-g {
+        0% {
+        }
+
+        85% {
+            transform: translateY(0);
+        }
+
+        100% {
+            transform: translateY(-9px);
+        }
+    }
+
+    @keyframes hourglass-rotation {
+        50% {
+            transform: rotateZ(0);
+        }
+
+        100% {
+            transform: rotateZ(180deg);
+        }
+    }
+
+
+    #top-sand #top-clip-path rect,
+    #bottom-sand path,
+    #bottom-sand g,
+    svg {
+        animation-duration: 5s;
+        animation-delay: 1s;
+        animation-iteration-count: infinite;
+    }
+
+    #top-sand #top-clip-path rect {
+        animation-name: top-clip;
+    }
+
+    #bottom-sand path {
         transform: translateY(21px);
+        animation-name: bottom-sand-path;
     }
 
-    100% {
-        transform: translateY(21px);
-    }
-}
-
-@keyframes bottom-sand-path {
-    0% {
+    #bottom-sand g {
+        animation-name: bottom-sand-g;
     }
 
-    50% {
-        transform: translateY(0);
+    .hourglass svg {
+        animation-name: hourglass-rotation;
     }
 
-    100% {
-        transform: translateY(0);
-    }
-}
-
-@keyframes bottom-sand-g {
-    0% {
+    .hourglass {
+        display: inline-flex;
     }
 
-    85% {
-        transform: translateY(0);
+
+    .casedetails {
+        align-self: flex-end;
+
+
+        .table td {
+            padding: .45rem;
+        }
+
+        h3 {
+            padding: 0 1.2rem;
+        }
     }
 
-    100% {
-        transform: translateY(-9px);
-    }
-}
-
-@keyframes hourglass-rotation {
-    50% {
-        transform: rotateZ(0);
-    }
-
-    100% {
-        transform: rotateZ(180deg);
-    }
-}
-
-
-#top-sand #top-clip-path rect,
-#bottom-sand path,
-#bottom-sand g,
-svg {
-    animation-duration: 5s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-}
-
-#top-sand #top-clip-path rect {
-    animation-name: top-clip;
-}
-
-#bottom-sand path {
-    transform: translateY(21px);
-    animation-name: bottom-sand-path;
-}
-
-#bottom-sand g {
-    animation-name: bottom-sand-g;
-}
-
-.hourglass svg {
-    animation-name: hourglass-rotation;
-}
-
-.hourglass{
-    display:inline-flex;
-}
-
-
-.casedetails {
-    align-self: flex-end;
-
-
-    .table td {
-        padding: .45rem;
-    }
-
-    h3 {
-        padding: 0 1.2rem;
-    }
-}
     .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
         color: @maincolor;
         background-color: @greybg;
@@ -1017,26 +1018,44 @@ svg {
         padding: 1rem 1rem 0;
     }
 
-.card-title {
-    font-size: 18px;
-    font-weight: 600;
-    
-}
+    .card-title {
+        font-size: 14px;
+        text-transform:uppercase;
+        font-weight: 600;
+    }
 
 
 
-.card-header {
-    padding: .75rem 1.25rem;
-    margin-bottom: 0;
-    background-color: @greybg;
-    border-bottom: 0px solid rgba(0,0,0,.125);
-}
-.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
-    border-color: @greybg;
-    background: @highlightcolordark;
-    outline:none !important;
-}
+    .card-header {
+        padding: .75rem 1.25rem;
+        margin-bottom: 0;
+        background-color: @greybg;
+        border-bottom: 0px solid rgba(0,0,0,.125);
+    }
+
+    .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
+        border-color: @greybg;
+        background: @highlightcolordark;
+        outline: none !important;
+    }
+
 .content {
+
+    .btn-soft {
+        outline: none !important;
+        display: flex;
+        border: 0;
+        color:#ffffff;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: bold;
+        border-radius: 80px;
+        background: @soft;
+        padding: 0.7rem 2rem;
+        box-shadow: 0 0 3px rgba(0,0,0,0.4);
+    }
+
     .btn-primary {
         display: flex;
         border: 0;
@@ -1099,221 +1118,166 @@ svg {
             margin-top: 10px;
         }
     }
-
-
     /*Dashboard*/
+    #dashboard {
 
-#dashboard {
-    h3{
-        margin-top:0 !important;
-    }
-    h2 {
+        position:relative;
 
-        .statistic {
-            color: @maincolor;
-            text-align: center;
-            font-size: 34px;
-            display: block;
-            text-align: center;
+        &:before{
+
+            background:@highlightcolor;
+            content:"";
+            position:absolute;
+            top:0;
+            left:0;
+            margin-top:-20px;
+            width:100%;
+            height:300px;
+        }
+        h3 {
+            margin-top: 0 !important;
+            padding-top:0 !important;
         }
 
-        span {
-            margin-top: 15px;
-            text-transform: uppercase;
-            font-size: 13px;
-            text-align: center;
-            display: block;
-            color: @bodytext;
+        h2 {
+
+            .statistic {
+                color: @maincolor;
+                text-align: center;
+                font-size: 34px;
+                display: block;
+                text-align: center;
+            }
+
+            span {
+                margin-top: 15px;
+                text-transform: uppercase;
+                font-size: 13px;
+                text-align: center;
+                display: block;
+                color: @bodytext;
+            }
+        }
+
+        .avatar {
+            border-radius: 50%;
+            width: 45px;
+            height: 45px;
+            background: @maincolor;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+
+            i:before {
+                font-size: 20px;
+            }
+
+            img {
+                vertical-align: middle !important;
+            }
         }
     }
 
-    .avatar {
-        border-radius: 50%;
-        width: 45px;
-        height: 45px;
-        background: @highlightcolor;
-        display: flex;
-      
-        align-items: center;
-        justify-content: center;
-        color: #fff;
-        i:before{
-            font-size:20px;
-        }
-        img {
-            vertical-align: middle !important;
-        }
-    }
-}
-.alert-warning {
-    color: @bodytext;
-    background-color: #FFF8E2;
-    border-color: @secondarycolor;
-
-    i {
-        color: @secondarycolor;
-    }
-}
-
-button{
-    outline:none !important;
-}
-
-.redcard {
-    background: @maincolor;
-    color: #ffffff;
-
-    .avatar {
-        background: #ffffff !important;
+    .alert-warning {
+        color: @bodytext;
+        background-color: #FFF8E2;
+        font-size: 12px;
+        border-color: @secondarycolor;
 
         i {
-            color: @maincolor;
+            color: @secondarycolor;
         }
     }
 
-    h1 {
-        color: @secondarycolor;
+    button {
+        outline: none !important;
     }
 
-    a {
-        color: @secondarycolor;
+    .redcard {
+        background: @maincolor;
+        color: #ffffff;
+
+        .avatar {
+            background: #ffffff !important;
+
+            i {
+                color: @maincolor;
+            }
+        }
+
+        h1 {
+            color: @secondarycolor;
+        }
+
+        a {
+            color: @secondarycolor;
+        }
     }
-}
+.todo {
 
-/*Experiement*/
-
-
-input {
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #eceff1;
-    font-size: 24px;
-    height: 50px;
-    padding-bottom: 15px;
-}
-
-input:focus {
-    outline: 0;
-}
-
-@media (min-width: 900px) {
-    input {
-        font-size: 32px;
-    }
-}
-
-.input-buttons {
-    height: 50px;
-    border-bottom: 1px solid #eceff1;
-    padding: 0;
-}
-
-.input-buttons i {
-    padding: 0 12px;
-    color: #eceff1;
-    float: right;
-}
-
-.input-buttons .fa-plus {
-}
-
-@media (min-width: 600px) {
-    .input-buttons .fa-trash-o:hover {
-        color: #ff5252;
+    .nav-pills .nav-link {
+        font-weight:500;
+        color:@bodytext;
     }
 
-    .input-buttons .fa-plus:hover {
-        color: #69f0ae;
+    .badge {
+        align-items: flex-start;
+        justify-content: flex-start;
+        line-height: 20px;
+    }
+
+   
+}
+h3 {
+    .question {
+        display: block;
+        text-transform: uppercase;
+        font-size: 12px;
+        color: @thirdiarycolor;
     }
 }
-
-.error {
-    color: #ff5252;
-    display: none;
-    font-size: 16px;
-    margin-top: 20px;
-    text-align: center;
+.alert-dismissible .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: .55rem 0.75rem;
+    color: inherit;
 }
 
-.error .fa-times {
-    color: #eceff1;
-    padding: 5px 15px;
-    float: right;
-}
+.stat{
 
-.error .fa-times:hover {
-    color: #fafafa;
-}
+    &:hover{background:@secondarycolor; transition:all 0.2s}
+    a{
+        color:@bodytext;
+        font-size:14px;
 
-.error p {
-    margin: 20px 0;
-}
-
-@media (min-width: 600px) {
-    .error p {
-        font-size: 20px;
+        text-transform:uppercase;
+        font-weight:bold;
+        margin-top:20px;
+        display:block;
     }
 }
 
-.todo-list {
-    width: 100%;
-    padding: 0;
-    margin: 20px 0 50px;
+#small-stats{
+    a{
 
-    span {
-        position: absolute;
-        top: 15px;
-        right: 0;
+        font-size:13px;
     }
+    .avatar{
 
-    span a {
-        color: #455a64;
-    }
-
-    span i {
-        padding: 10px 15px;
-    }
-
-    span .fa-check {
-    }
-
-    span .fa-check:hover {
-        color: #69f0ae;
-    }
-
-    span .fa-trash-o:hover {
-        color: #ff5252;
-    }
-
-    .complete {
-        color: #90a4ae;
-        text-decoration: line-through;
-    }
-
-    .complete .check {
-        color: #69f0ae;
+        img{
+            width:26px;
+            height:26px;
+        }
     }
 }
 
-.todo-list .todo {
-    background: @highlightcolor;
-    border-bottom: 1px dotted #455a64;
-    color: #455a64;
-    font-size: 20px;
-    list-style: none;
-    padding: 20px 130px 20px 15px;
-    position: relative;
-    white-space: normal;
-}
-
-
-
-p.warning {
-    width: 100%;
-    font-size: 12px;
-    color: @red;
-}
-
-.error {
-    width: 100%;
+#btn_view {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    height: 36px;
+    font-size: 13px;
+    padding: 0.45rem 0.66rem;
 }
