--- a/css/start.css
+++ b/css/start.css
@@ -1306,7 +1306,7 @@ h3 {
   font-weight: bold;
   border-radius: 80px;
   background: #8acfcf;
-  padding: 0.7rem 2rem;
+  padding: 0.9rem 2rem;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
 }
 .content .btn-primary {
@@ -1399,6 +1399,9 @@ h3 {
   align-items: center;
   justify-content: center;
   color: #fff;
+  position: absolute;
+  right: 10px;
+  top: -5px;
 }
 #dashboard .avatar i:before {
   font-size: 20px;
@@ -1437,6 +1440,7 @@ button {
 .todo .nav-pills .nav-link {
   font-weight: 500;
   color: #2f1f3e;
+  padding: 5px 0;
 }
 .todo .badge {
   align-items: flex-start;
