--- a/less/start.less
+++ b/less/start.less
@@ -1052,7 +1052,7 @@ footer {
         font-weight: bold;
         border-radius: 80px;
         background: @soft;
-        padding: 0.7rem 2rem;
+        padding: 0.9rem 2rem;
         box-shadow: 0 0 3px rgba(0,0,0,0.4);
     }
 
@@ -1168,6 +1168,9 @@ footer {
             align-items: center;
             justify-content: center;
             color: #fff;
+            position:absolute;
+            right:10px;
+            top:-5px;
 
             i:before {
                 font-size: 20px;
@@ -1219,6 +1222,7 @@ footer {
     .nav-pills .nav-link {
         font-weight:500;
         color:@bodytext;
+        padding:5px 0;
     }
 
     .badge {
